--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,31 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<<<<<<< HEAD
-	<meta charset="utf-8">
-	<title>AirBnB Clone</title>
-</head>
-<body style="margin:0px;padding:0px;">
-	<header style="background-color:#FF0000;height=70px;width=100%;">
-	</header>
-
-	<footer style="background-color:#00FF00;height:60px;width:100%;text-align:center;bottom:0;position:absolute;">
-		<p style="margin:0;">Best School</p>
-	</footer>
-=======
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AirBnB</title>
+    <title>Airbnb</title>
 </head>
 <body style='margin:0; padding:0'>
-    <header>
-        style="background-color: #ff0000; height: 70px; width: 100%"
+    <header style='background-color:#FF0000; height:70px; width:100%'>
     </header>
-
     <footer style='background-color:#00FF00; height:60px; width:100%; position:fixed; bottom:0px'>
         <div style='position:absolute; top:50%; left:50%; transform:translate(-50%, -50%)'>Best School</div>
     </footer>
-
->>>>>>> 598970d5ff3d4ed126c1c69affe41aaf1cc50f47
 </body>
 </html>
